sintatico/parser.output
Grammar

    0 $accept: program $end

    1 program: line_elems

    2 line_elems: line_elem line_elems
    3           | line_elem

    4 line_elem: fundecl
    5          | procdecl
    6          | funtype_decl

    7 fundecl: ID args '=' expr ';'
    8        | ID args '=' expr where_exp
    9        | ID '=' expr ';'
   10        | ID '=' expr where_exp
   11        | ID args '=' error ';'
   12        | ID error '=' expr ';'

   13 args: arg_value args
   14     | WILDSCORE args
   15     | arg_value
   16     | WILDSCORE

   17 arg_value: '(' list_value ')'
   18          | basic_value
   19          | '(' arg_value ')'

   20 id_list: ID ':' id_list
   21        | WILDSCORE ':' id_list
   22        | ID
   23        | WILDSCORE

   24 basic_value: NUMBER
   25            | FLOATNUM
   26            | BOOLVAL
   27            | ID
   28            | '(' ')'

   29 list_value: basic_value ':' list_value
   30           | '[' list_args ']' ':' list_value
   31           | WILDSCORE ':' WILDSCORE
   32           | WILDSCORE ':' list_value
   33           | built_list_value
   34           | basic_value ':' ID
   35           | basic_value ':' WILDSCORE

   36 list_args: arg_value
   37          | arg_value ',' list_args

   38 built_list_value: '[' ']'
   39                 | '[' list_args ']'

   40 funtype_decl: ID DOUBLECOLON funtype ';'

   41 funtype: basic_type
   42        | '(' funtype ')'
   43        | basic_type RARROW funtype
   44        | '(' funtype ')' RARROW funtype

   45 basic_type: INTEGER
   46           | FLOAT
   47           | BOOL
   48           | '[' basic_type ']'
   49           | ID
   50           | '(' ')'

   51 appexpr: appexpr nonapp
   52        | nonapp nonapp

   53 nonapp: basic_value
   54       | '(' expr ')'

   55 expr: op_prec1
   56     | appexpr
   57     | ifexpr

   58 ifexpr: IF expr THEN expr ELSE expr

   59 yieldexpr: YIELD ifexpr
   60          | YIELD appexpr
   61          | YIELD op_prec1

   62 op_prec1: op_prec2 OR op_prec1
   63         | op_prec2

   64 op_prec2: op_prec3 AND op_prec2
   65         | op_prec3

   66 op_prec3: op_prec4 EQUALS op_prec3
   67         | op_prec4 DIFF op_prec3
   68         | op_prec4 '<' op_prec3
   69         | op_prec4 LEQ op_prec3
   70         | op_prec4 '>' op_prec3
   71         | op_prec4 GEQ op_prec3
   72         | op_prec4

   73 op_prec4: op_prec5 ':' op_prec4
   74         | op_prec5 APPEND op_prec4
   75         | op_prec5

   76 op_prec5: op_prec5 '+' op_prec6
   77         | op_prec5 '-' op_prec6
   78         | op_prec6

   79 op_prec6: op_prec6 '%' op_prec7
   80         | op_prec7

   81 op_prec7: op_prec7 '*' op_prec8
   82         | op_prec7 '/' op_prec8
   83         | op_prec8

   84 op_prec8: basic_value
   85         | list_expr
   86         | '(' expr ')'
   87         | '-' op_prec8

   88 exprs: expr
   89      | expr ',' exprs

   90 list_expr: '[' exprs ']'
   91          | '[' ']'

   92 where_exp: WHERE '{' line_elems '}'

   93 procdecl: ID args '=' DO '{' stmts '}'
   94         | ID args '=' DO '{' stmts '}' where_exp
   95         | ID '=' DO '{' stmts '}'
   96         | ID '=' DO '{' stmts '}' where_exp
   97         | ID error '=' '{' stmts '}'

   98 stmts: stmt
   99      | stmt stmts

  100 stmt: id_list LARROW expr ';'
  101     | id_list LARROW while_expr
  102     | id_list LARROW io_stmt ';'
  103     | yieldexpr ';'
  104     | while_expr
  105     | io_stmt ';'
  106     | error ';'

  107 io_stmt: READINT
  108        | READFLOAT
  109        | READBOOL
  110        | PRINT expr

  111 while_expr: WHILE '(' expr ')' '{' stmts '}'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 79
'(' (40) 17 19 28 42 44 50 54 86 111
')' (41) 17 19 28 42 44 50 54 86 111
'*' (42) 81
'+' (43) 76
',' (44) 37 89
'-' (45) 77 87
'/' (47) 82
':' (58) 20 21 29 30 31 32 34 35 73
';' (59) 7 9 11 12 40 100 102 103 105 106
'<' (60) 68
'=' (61) 7 8 9 10 11 12 93 94 95 96 97
'>' (62) 70
'[' (91) 30 38 39 48 90 91
']' (93) 30 38 39 48 90 91
'{' (123) 92 93 94 95 96 97 111
'}' (125) 92 93 94 95 96 97 111
error (256) 11 12 97 106
ID (258) 7 8 9 10 11 12 20 22 27 34 40 49 93 94 95 96 97
WILDSCORE (259) 14 16 21 23 31 32 35
FLOAT (260) 46
BOOLVAL (261) 26
BOOL (262) 47
NUMBER (263) 24
FLOATNUM (264) 25
INTEGER (265) 45
IF (266) 58
ELSE (267) 58
THEN (268) 58
WHILE (269) 111
WHERE (270) 92
YIELD (271) 59 60 61
DO (272) 93 94 95 96
PRINT (273) 110
READBOOL (274) 109
READFLOAT (275) 108
READINT (276) 107
RARROW (277) 43 44
LARROW (278) 100 101 102
DIFF (279) 67
EQUALS (280) 66
DOUBLECOLON (281) 40
APPEND (282) 74
AND (283) 64
OR (284) 62
LEQ (285) 69
GEQ (286) 71


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
program (50)
    on left: 1, on right: 0
line_elems (51)
    on left: 2 3, on right: 1 2 92
line_elem (52)
    on left: 4 5 6, on right: 2 3
fundecl (53)
    on left: 7 8 9 10 11 12, on right: 4
args (54)
    on left: 13 14 15 16, on right: 7 8 11 13 14 93 94
arg_value (55)
    on left: 17 18 19, on right: 13 15 19 36 37
id_list (56)
    on left: 20 21 22 23, on right: 20 21 100 101 102
basic_value (57)
    on left: 24 25 26 27 28, on right: 18 29 34 35 53 84
list_value (58)
    on left: 29 30 31 32 33 34 35, on right: 17 29 30 32
list_args (59)
    on left: 36 37, on right: 30 37 39
built_list_value (60)
    on left: 38 39, on right: 33
funtype_decl (61)
    on left: 40, on right: 6
funtype (62)
    on left: 41 42 43 44, on right: 40 42 43 44
basic_type (63)
    on left: 45 46 47 48 49 50, on right: 41 43 48
appexpr (64)
    on left: 51 52, on right: 51 56 60
nonapp (65)
    on left: 53 54, on right: 51 52
expr (66)
    on left: 55 56 57, on right: 7 8 9 10 12 54 58 86 88 89 100 110
    111
ifexpr (67)
    on left: 58, on right: 57 59
yieldexpr (68)
    on left: 59 60 61, on right: 103
op_prec1 (69)
    on left: 62 63, on right: 55 61 62
op_prec2 (70)
    on left: 64 65, on right: 62 63 64
op_prec3 (71)
    on left: 66 67 68 69 70 71 72, on right: 64 65 66 67 68 69 70 71
op_prec4 (72)
    on left: 73 74 75, on right: 66 67 68 69 70 71 72 73 74
op_prec5 (73)
    on left: 76 77 78, on right: 73 74 75 76 77
op_prec6 (74)
    on left: 79 80, on right: 76 77 78 79
op_prec7 (75)
    on left: 81 82 83, on right: 79 80 81 82
op_prec8 (76)
    on left: 84 85 86 87, on right: 81 82 83 87
exprs (77)
    on left: 88 89, on right: 89 90
list_expr (78)
    on left: 90 91, on right: 85
where_exp (79)
    on left: 92, on right: 8 10 94 96
procdecl (80)
    on left: 93 94 95 96 97, on right: 5
stmts (81)
    on left: 98 99, on right: 93 94 95 96 97 99 111
stmt (82)
    on left: 100 101 102 103 104 105 106, on right: 98 99
io_stmt (83)
    on left: 107 108 109 110, on right: 102 105
while_expr (84)
    on left: 111, on right: 101 104


State 0

    0 $accept: . program $end

    ID  shift, and go to state 1

    program       go to state 2
    line_elems    go to state 3
    line_elem     go to state 4
    fundecl       go to state 5
    funtype_decl  go to state 6
    procdecl      go to state 7


State 1

    7 fundecl: ID . args '=' expr ';'
    8        | ID . args '=' expr where_exp
    9        | ID . '=' expr ';'
   10        | ID . '=' expr where_exp
   11        | ID . args '=' error ';'
   12        | ID . error '=' expr ';'
   40 funtype_decl: ID . DOUBLECOLON funtype ';'
   93 procdecl: ID . args '=' DO '{' stmts '}'
   94         | ID . args '=' DO '{' stmts '}' where_exp
   95         | ID . '=' DO '{' stmts '}'
   96         | ID . '=' DO '{' stmts '}' where_exp
   97         | ID . error '=' '{' stmts '}'

    error        shift, and go to state 8
    ID           shift, and go to state 9
    WILDSCORE    shift, and go to state 10
    BOOLVAL      shift, and go to state 11
    NUMBER       shift, and go to state 12
    FLOATNUM     shift, and go to state 13
    DOUBLECOLON  shift, and go to state 14
    '='          shift, and go to state 15
    '('          shift, and go to state 16

    args         go to state 17
    arg_value    go to state 18
    basic_value  go to state 19


State 2

    0 $accept: program . $end

    $end  shift, and go to state 20


State 3

    1 program: line_elems .

    $default  reduce using rule 1 (program)


State 4

    2 line_elems: line_elem . line_elems
    3           | line_elem .

    ID  shift, and go to state 1

    $default  reduce using rule 3 (line_elems)

    line_elems    go to state 21
    line_elem     go to state 4
    fundecl       go to state 5
    funtype_decl  go to state 6
    procdecl      go to state 7


State 5

    4 line_elem: fundecl .

    $default  reduce using rule 4 (line_elem)


State 6

    6 line_elem: funtype_decl .

    $default  reduce using rule 6 (line_elem)


State 7

    5 line_elem: procdecl .

    $default  reduce using rule 5 (line_elem)


State 8

   12 fundecl: ID error . '=' expr ';'
   97 procdecl: ID error . '=' '{' stmts '}'

    '='  shift, and go to state 22


State 9

   27 basic_value: ID .

    $default  reduce using rule 27 (basic_value)


State 10

   14 args: WILDSCORE . args
   16     | WILDSCORE .

    ID         shift, and go to state 9
    WILDSCORE  shift, and go to state 10
    BOOLVAL    shift, and go to state 11
    NUMBER     shift, and go to state 12
    FLOATNUM   shift, and go to state 13
    '('        shift, and go to state 16

    $default  reduce using rule 16 (args)

    args         go to state 23
    arg_value    go to state 18
    basic_value  go to state 19


State 11

   26 basic_value: BOOLVAL .

    $default  reduce using rule 26 (basic_value)


State 12

   24 basic_value: NUMBER .

    $default  reduce using rule 24 (basic_value)


State 13

   25 basic_value: FLOATNUM .

    $default  reduce using rule 25 (basic_value)


State 14

   40 funtype_decl: ID DOUBLECOLON . funtype ';'

    ID       shift, and go to state 24
    FLOAT    shift, and go to state 25
    BOOL     shift, and go to state 26
    INTEGER  shift, and go to state 27
    '('      shift, and go to state 28
    '['      shift, and go to state 29

    funtype     go to state 30
    basic_type  go to state 31


State 15

    9 fundecl: ID '=' . expr ';'
   10        | ID '=' . expr where_exp
   95 procdecl: ID '=' . DO '{' stmts '}'
   96         | ID '=' . DO '{' stmts '}' where_exp

    ID        shift, and go to state 9
    BOOLVAL   shift, and go to state 11
    NUMBER    shift, and go to state 12
    FLOATNUM  shift, and go to state 13
    IF        shift, and go to state 32
    DO        shift, and go to state 33
    '('       shift, and go to state 34
    '['       shift, and go to state 35
    '-'       shift, and go to state 36

    basic_value  go to state 37
    appexpr      go to state 38
    nonapp       go to state 39
    expr         go to state 40
    ifexpr       go to state 41
    op_prec1     go to state 42
    op_prec2     go to state 43
    op_prec3     go to state 44
    op_prec4     go to state 45
    op_prec5     go to state 46
    op_prec6     go to state 47
    op_prec7     go to state 48
    op_prec8     go to state 49
    list_expr    go to state 50


State 16

   17 arg_value: '(' . list_value ')'
   19          | '(' . arg_value ')'
   28 basic_value: '(' . ')'

    ID         shift, and go to state 9
    WILDSCORE  shift, and go to state 51
    BOOLVAL    shift, and go to state 11
    NUMBER     shift, and go to state 12
    FLOATNUM   shift, and go to state 13
    '('        shift, and go to state 16
    ')'        shift, and go to state 52
    '['        shift, and go to state 53

    arg_value         go to state 54
    basic_value       go to state 55
    list_value        go to state 56
    built_list_value  go to state 57


State 17

    7 fundecl: ID args . '=' expr ';'
    8        | ID args . '=' expr where_exp
   11        | ID args . '=' error ';'
   93 procdecl: ID args . '=' DO '{' stmts '}'
   94         | ID args . '=' DO '{' stmts '}' where_exp

    '='  shift, and go to state 58


State 18

   13 args: arg_value . args
   15     | arg_value .

    ID         shift, and go to state 9
    WILDSCORE  shift, and go to state 10
    BOOLVAL    shift, and go to state 11
    NUMBER     shift, and go to state 12
    FLOATNUM   shift, and go to state 13
    '('        shift, and go to state 16

    $default  reduce using rule 15 (args)

    args         go to state 59
    arg_value    go to state 18
    basic_value  go to state 19


State 19

   18 arg_value: basic_value .

    $default  reduce using rule 18 (arg_value)


State 20

    0 $accept: program $end .

    $default  accept


State 21

    2 line_elems: line_elem line_elems .

    $default  reduce using rule 2 (line_elems)


State 22

   12 fundecl: ID error '=' . expr ';'
   97 procdecl: ID error '=' . '{' stmts '}'

    ID        shift, and go to state 9
    BOOLVAL   shift, and go to state 11
    NUMBER    shift, and go to state 12
    FLOATNUM  shift, and go to state 13
    IF        shift, and go to state 32
    '('       shift, and go to state 34
    '['       shift, and go to state 35
    '-'       shift, and go to state 36
    '{'       shift, and go to state 60

    basic_value  go to state 37
    appexpr      go to state 38
    nonapp       go to state 39
    expr         go to state 61
    ifexpr       go to state 41
    op_prec1     go to state 42
    op_prec2     go to state 43
    op_prec3     go to state 44
    op_prec4     go to state 45
    op_prec5     go to state 46
    op_prec6     go to state 47
    op_prec7     go to state 48
    op_prec8     go to state 49
    list_expr    go to state 50


State 23

   14 args: WILDSCORE args .

    $default  reduce using rule 14 (args)


State 24

   49 basic_type: ID .

    $default  reduce using rule 49 (basic_type)


State 25

   46 basic_type: FLOAT .

    $default  reduce using rule 46 (basic_type)


State 26

   47 basic_type: BOOL .

    $default  reduce using rule 47 (basic_type)


State 27

   45 basic_type: INTEGER .

    $default  reduce using rule 45 (basic_type)


State 28

   42 funtype: '(' . funtype ')'
   44        | '(' . funtype ')' RARROW funtype
   50 basic_type: '(' . ')'

    ID       shift, and go to state 24
    FLOAT    shift, and go to state 25
    BOOL     shift, and go to state 26
    INTEGER  shift, and go to state 27
    '('      shift, and go to state 28
    ')'      shift, and go to state 62
    '['      shift, and go to state 29

    funtype     go to state 63
    basic_type  go to state 31


State 29

   48 basic_type: '[' . basic_type ']'

    ID       shift, and go to state 24
    FLOAT    shift, and go to state 25
    BOOL     shift, and go to state 26
    INTEGER  shift, and go to state 27
    '('      shift, and go to state 64
    '['      shift, and go to state 29

    basic_type  go to state 65


State 30

   40 funtype_decl: ID DOUBLECOLON funtype . ';'

    ';'  shift, and go to state 66


State 31

   41 funtype: basic_type .
   43        | basic_type . RARROW funtype

    RARROW  shift, and go to state 67

    $default  reduce using rule 41 (funtype)


State 32

   58 ifexpr: IF . expr THEN expr ELSE expr

    ID        shift, and go to state 9
    BOOLVAL   shift, and go to state 11
    NUMBER    shift, and go to state 12
    FLOATNUM  shift, and go to state 13
    IF        shift, and go to state 32
    '('       shift, and go to state 34
    '['       shift, and go to state 35
    '-'       shift, and go to state 36

    basic_value  go to state 37
    appexpr      go to state 38
    nonapp       go to state 39
    expr         go to state 68
    ifexpr       go to state 41
    op_prec1     go to state 42
    op_prec2     go to state 43
    op_prec3     go to state 44
    op_prec4     go to state 45
    op_prec5     go to state 46
    op_prec6     go to state 47
    op_prec7     go to state 48
    op_prec8     go to state 49
    list_expr    go to state 50


State 33

   95 procdecl: ID '=' DO . '{' stmts '}'
   96         | ID '=' DO . '{' stmts '}' where_exp

    '{'  shift, and go to state 69


State 34

   28 basic_value: '(' . ')'
   54 nonapp: '(' . expr ')'
   86 op_prec8: '(' . expr ')'

    ID        shift, and go to state 9
    BOOLVAL   shift, and go to state 11
    NUMBER    shift, and go to state 12
    FLOATNUM  shift, and go to state 13
    IF        shift, and go to state 32
    '('       shift, and go to state 34
    ')'       shift, and go to state 52
    '['       shift, and go to state 35
    '-'       shift, and go to state 36

    basic_value  go to state 37
    appexpr      go to state 38
    nonapp       go to state 39
    expr         go to state 70
    ifexpr       go to state 41
    op_prec1     go to state 42
    op_prec2     go to state 43
    op_prec3     go to state 44
    op_prec4     go to state 45
    op_prec5     go to state 46
    op_prec6     go to state 47
    op_prec7     go to state 48
    op_prec8     go to state 49
    list_expr    go to state 50


State 35

   90 list_expr: '[' . exprs ']'
   91          | '[' . ']'

    ID        shift, and go to state 9
    BOOLVAL   shift, and go to state 11
    NUMBER    shift, and go to state 12
    FLOATNUM  shift, and go to state 13
    IF        shift, and go to state 32
    '('       shift, and go to state 34
    '['       shift, and go to state 35
    ']'       shift, and go to state 71
    '-'       shift, and go to state 36

    basic_value  go to state 37
    appexpr      go to state 38
    nonapp       go to state 39
    expr         go to state 72
    ifexpr       go to state 41
    op_prec1     go to state 42
    op_prec2     go to state 43
    op_prec3     go to state 44
    op_prec4     go to state 45
    op_prec5     go to state 46
    op_prec6     go to state 47
    op_prec7     go to state 48
    op_prec8     go to state 49
    exprs        go to state 73
    list_expr    go to state 50


State 36

   87 op_prec8: '-' . op_prec8

    ID        shift, and go to state 9
    BOOLVAL   shift, and go to state 11
    NUMBER    shift, and go to state 12
    FLOATNUM  shift, and go to state 13
    '('       shift, and go to state 74
    '['       shift, and go to state 35
    '-'       shift, and go to state 36

    basic_value  go to state 75
    op_prec8     go to state 76
    list_expr    go to state 50


State 37

   53 nonapp: basic_value .
   84 op_prec8: basic_value .

    ID        reduce using rule 53 (nonapp)
    BOOLVAL   reduce using rule 53 (nonapp)
    NUMBER    reduce using rule 53 (nonapp)
    FLOATNUM  reduce using rule 53 (nonapp)
    '('       reduce using rule 53 (nonapp)
    $default  reduce using rule 84 (op_prec8)


State 38

   51 appexpr: appexpr . nonapp
   56 expr: appexpr .

    ID        shift, and go to state 9
    BOOLVAL   shift, and go to state 11
    NUMBER    shift, and go to state 12
    FLOATNUM  shift, and go to state 13
    '('       shift, and go to state 77

    $default  reduce using rule 56 (expr)

    basic_value  go to state 78
    nonapp       go to state 79


State 39

   52 appexpr: nonapp . nonapp

    ID        shift, and go to state 9
    BOOLVAL   shift, and go to state 11
    NUMBER    shift, and go to state 12
    FLOATNUM  shift, and go to state 13
    '('       shift, and go to state 77

    basic_value  go to state 78
    nonapp       go to state 80


State 40

    9 fundecl: ID '=' expr . ';'
   10        | ID '=' expr . where_exp

    WHERE  shift, and go to state 81
    ';'    shift, and go to state 82

    where_exp  go to state 83


State 41

   57 expr: ifexpr .

    $default  reduce using rule 57 (expr)


State 42

   55 expr: op_prec1 .

    $default  reduce using rule 55 (expr)


State 43

   62 op_prec1: op_prec2 . OR op_prec1
   63         | op_prec2 .

    OR  shift, and go to state 84

    $default  reduce using rule 63 (op_prec1)


State 44

   64 op_prec2: op_prec3 . AND op_prec2
   65         | op_prec3 .

    AND  shift, and go to state 85

    $default  reduce using rule 65 (op_prec2)


State 45

   66 op_prec3: op_prec4 . EQUALS op_prec3
   67         | op_prec4 . DIFF op_prec3
   68         | op_prec4 . '<' op_prec3
   69         | op_prec4 . LEQ op_prec3
   70         | op_prec4 . '>' op_prec3
   71         | op_prec4 . GEQ op_prec3
   72         | op_prec4 .

    DIFF    shift, and go to state 86
    EQUALS  shift, and go to state 87
    LEQ     shift, and go to state 88
    GEQ     shift, and go to state 89
    '<'     shift, and go to state 90
    '>'     shift, and go to state 91

    $default  reduce using rule 72 (op_prec3)


State 46

   73 op_prec4: op_prec5 . ':' op_prec4
   74         | op_prec5 . APPEND op_prec4
   75         | op_prec5 .
   76 op_prec5: op_prec5 . '+' op_prec6
   77         | op_prec5 . '-' op_prec6

    APPEND  shift, and go to state 92
    ':'     shift, and go to state 93
    '+'     shift, and go to state 94
    '-'     shift, and go to state 95

    $default  reduce using rule 75 (op_prec4)


State 47

   78 op_prec5: op_prec6 .
   79 op_prec6: op_prec6 . '%' op_prec7

    '%'  shift, and go to state 96

    $default  reduce using rule 78 (op_prec5)


State 48

   80 op_prec6: op_prec7 .
   81 op_prec7: op_prec7 . '*' op_prec8
   82         | op_prec7 . '/' op_prec8

    '*'  shift, and go to state 97
    '/'  shift, and go to state 98

    $default  reduce using rule 80 (op_prec6)


State 49

   83 op_prec7: op_prec8 .

    $default  reduce using rule 83 (op_prec7)


State 50

   85 op_prec8: list_expr .

    $default  reduce using rule 85 (op_prec8)


State 51

   31 list_value: WILDSCORE . ':' WILDSCORE
   32           | WILDSCORE . ':' list_value

    ':'  shift, and go to state 99


State 52

   28 basic_value: '(' ')' .

    $default  reduce using rule 28 (basic_value)


State 53

   30 list_value: '[' . list_args ']' ':' list_value
   38 built_list_value: '[' . ']'
   39                 | '[' . list_args ']'

    ID        shift, and go to state 9
    BOOLVAL   shift, and go to state 11
    NUMBER    shift, and go to state 12
    FLOATNUM  shift, and go to state 13
    '('       shift, and go to state 16
    ']'       shift, and go to state 100

    arg_value    go to state 101
    basic_value  go to state 19
    list_args    go to state 102


State 54

   19 arg_value: '(' arg_value . ')'

    ')'  shift, and go to state 103


State 55

   18 arg_value: basic_value .
   29 list_value: basic_value . ':' list_value
   34           | basic_value . ':' ID
   35           | basic_value . ':' WILDSCORE

    ':'  shift, and go to state 104

    $default  reduce using rule 18 (arg_value)


State 56

   17 arg_value: '(' list_value . ')'

    ')'  shift, and go to state 105


State 57

   33 list_value: built_list_value .

    $default  reduce using rule 33 (list_value)


State 58

    7 fundecl: ID args '=' . expr ';'
    8        | ID args '=' . expr where_exp
   11        | ID args '=' . error ';'
   93 procdecl: ID args '=' . DO '{' stmts '}'
   94         | ID args '=' . DO '{' stmts '}' where_exp

    error     shift, and go to state 106
    ID        shift, and go to state 9
    BOOLVAL   shift, and go to state 11
    NUMBER    shift, and go to state 12
    FLOATNUM  shift, and go to state 13
    IF        shift, and go to state 32
    DO        shift, and go to state 107
    '('       shift, and go to state 34
    '['       shift, and go to state 35
    '-'       shift, and go to state 36

    basic_value  go to state 37
    appexpr      go to state 38
    nonapp       go to state 39
    expr         go to state 108
    ifexpr       go to state 41
    op_prec1     go to state 42
    op_prec2     go to state 43
    op_prec3     go to state 44
    op_prec4     go to state 45
    op_prec5     go to state 46
    op_prec6     go to state 47
    op_prec7     go to state 48
    op_prec8     go to state 49
    list_expr    go to state 50


State 59

   13 args: arg_value args .

    $default  reduce using rule 13 (args)


State 60

   97 procdecl: ID error '=' '{' . stmts '}'

    error      shift, and go to state 109
    ID         shift, and go to state 110
    WILDSCORE  shift, and go to state 111
    WHILE      shift, and go to state 112
    YIELD      shift, and go to state 113
    PRINT      shift, and go to state 114
    READBOOL   shift, and go to state 115
    READFLOAT  shift, and go to state 116
    READINT    shift, and go to state 117

    id_list     go to state 118
    yieldexpr   go to state 119
    stmts       go to state 120
    stmt        go to state 121
    io_stmt     go to state 122
    while_expr  go to state 123


State 61

   12 fundecl: ID error '=' expr . ';'

    ';'  shift, and go to state 124


State 62

   50 basic_type: '(' ')' .

    $default  reduce using rule 50 (basic_type)


State 63

   42 funtype: '(' funtype . ')'
   44        | '(' funtype . ')' RARROW funtype

    ')'  shift, and go to state 125


State 64

   50 basic_type: '(' . ')'

    ')'  shift, and go to state 62


State 65

   48 basic_type: '[' basic_type . ']'

    ']'  shift, and go to state 126


State 66

   40 funtype_decl: ID DOUBLECOLON funtype ';' .

    $default  reduce using rule 40 (funtype_decl)


State 67

   43 funtype: basic_type RARROW . funtype

    ID       shift, and go to state 24
    FLOAT    shift, and go to state 25
    BOOL     shift, and go to state 26
    INTEGER  shift, and go to state 27
    '('      shift, and go to state 28
    '['      shift, and go to state 29

    funtype     go to state 127
    basic_type  go to state 31


State 68

   58 ifexpr: IF expr . THEN expr ELSE expr

    THEN  shift, and go to state 128


State 69

   95 procdecl: ID '=' DO '{' . stmts '}'
   96         | ID '=' DO '{' . stmts '}' where_exp

    error      shift, and go to state 109
    ID         shift, and go to state 110
    WILDSCORE  shift, and go to state 111
    WHILE      shift, and go to state 112
    YIELD      shift, and go to state 113
    PRINT      shift, and go to state 114
    READBOOL   shift, and go to state 115
    READFLOAT  shift, and go to state 116
    READINT    shift, and go to state 117

    id_list     go to state 118
    yieldexpr   go to state 119
    stmts       go to state 129
    stmt        go to state 121
    io_stmt     go to state 122
    while_expr  go to state 123


State 70

   54 nonapp: '(' expr . ')'
   86 op_prec8: '(' expr . ')'

    ')'  shift, and go to state 130


State 71

   91 list_expr: '[' ']' .

    $default  reduce using rule 91 (list_expr)


State 72

   88 exprs: expr .
   89      | expr . ',' exprs

    ','  shift, and go to state 131

    $default  reduce using rule 88 (exprs)


State 73

   90 list_expr: '[' exprs . ']'

    ']'  shift, and go to state 132


State 74

   28 basic_value: '(' . ')'
   86 op_prec8: '(' . expr ')'

    ID        shift, and go to state 9
    BOOLVAL   shift, and go to state 11
    NUMBER    shift, and go to state 12
    FLOATNUM  shift, and go to state 13
    IF        shift, and go to state 32
    '('       shift, and go to state 34
    ')'       shift, and go to state 52
    '['       shift, and go to state 35
    '-'       shift, and go to state 36

    basic_value  go to state 37
    appexpr      go to state 38
    nonapp       go to state 39
    expr         go to state 133
    ifexpr       go to state 41
    op_prec1     go to state 42
    op_prec2     go to state 43
    op_prec3     go to state 44
    op_prec4     go to state 45
    op_prec5     go to state 46
    op_prec6     go to state 47
    op_prec7     go to state 48
    op_prec8     go to state 49
    list_expr    go to state 50


State 75

   84 op_prec8: basic_value .

    $default  reduce using rule 84 (op_prec8)


State 76

   87 op_prec8: '-' op_prec8 .

    $default  reduce using rule 87 (op_prec8)


State 77

   28 basic_value: '(' . ')'
   54 nonapp: '(' . expr ')'

    ID        shift, and go to state 9
    BOOLVAL   shift, and go to state 11
    NUMBER    shift, and go to state 12
    FLOATNUM  shift, and go to state 13
    IF        shift, and go to state 32
    '('       shift, and go to state 34
    ')'       shift, and go to state 52
    '['       shift, and go to state 35
    '-'       shift, and go to state 36

    basic_value  go to state 37
    appexpr      go to state 38
    nonapp       go to state 39
    expr         go to state 134
    ifexpr       go to state 41
    op_prec1     go to state 42
    op_prec2     go to state 43
    op_prec3     go to state 44
    op_prec4     go to state 45
    op_prec5     go to state 46
    op_prec6     go to state 47
    op_prec7     go to state 48
    op_prec8     go to state 49
    list_expr    go to state 50


State 78

   53 nonapp: basic_value .

    $default  reduce using rule 53 (nonapp)


State 79

   51 appexpr: appexpr nonapp .

    $default  reduce using rule 51 (appexpr)


State 80

   52 appexpr: nonapp nonapp .

    $default  reduce using rule 52 (appexpr)


State 81

   92 where_exp: WHERE . '{' line_elems '}'

    '{'  shift, and go to state 135


State 82

    9 fundecl: ID '=' expr ';' .

    $default  reduce using rule 9 (fundecl)


State 83

   10 fundecl: ID '=' expr where_exp .

    $default  reduce using rule 10 (fundecl)


State 84

   62 op_prec1: op_prec2 OR . op_prec1

    ID        shift, and go to state 9
    BOOLVAL   shift, and go to state 11
    NUMBER    shift, and go to state 12
    FLOATNUM  shift, and go to state 13
    '('       shift, and go to state 74
    '['       shift, and go to state 35
    '-'       shift, and go to state 36

    basic_value  go to state 75
    op_prec1     go to state 136
    op_prec2     go to state 43
    op_prec3     go to state 44
    op_prec4     go to state 45
    op_prec5     go to state 46
    op_prec6     go to state 47
    op_prec7     go to state 48
    op_prec8     go to state 49
    list_expr    go to state 50


State 85

   64 op_prec2: op_prec3 AND . op_prec2

    ID        shift, and go to state 9
    BOOLVAL   shift, and go to state 11
    NUMBER    shift, and go to state 12
    FLOATNUM  shift, and go to state 13
    '('       shift, and go to state 74
    '['       shift, and go to state 35
    '-'       shift, and go to state 36

    basic_value  go to state 75
    op_prec2     go to state 137
    op_prec3     go to state 44
    op_prec4     go to state 45
    op_prec5     go to state 46
    op_prec6     go to state 47
    op_prec7     go to state 48
    op_prec8     go to state 49
    list_expr    go to state 50


State 86

   67 op_prec3: op_prec4 DIFF . op_prec3

    ID        shift, and go to state 9
    BOOLVAL   shift, and go to state 11
    NUMBER    shift, and go to state 12
    FLOATNUM  shift, and go to state 13
    '('       shift, and go to state 74
    '['       shift, and go to state 35
    '-'       shift, and go to state 36

    basic_value  go to state 75
    op_prec3     go to state 138
    op_prec4     go to state 45
    op_prec5     go to state 46
    op_prec6     go to state 47
    op_prec7     go to state 48
    op_prec8     go to state 49
    list_expr    go to state 50


State 87

   66 op_prec3: op_prec4 EQUALS . op_prec3

    ID        shift, and go to state 9
    BOOLVAL   shift, and go to state 11
    NUMBER    shift, and go to state 12
    FLOATNUM  shift, and go to state 13
    '('       shift, and go to state 74
    '['       shift, and go to state 35
    '-'       shift, and go to state 36

    basic_value  go to state 75
    op_prec3     go to state 139
    op_prec4     go to state 45
    op_prec5     go to state 46
    op_prec6     go to state 47
    op_prec7     go to state 48
    op_prec8     go to state 49
    list_expr    go to state 50


State 88

   69 op_prec3: op_prec4 LEQ . op_prec3

    ID        shift, and go to state 9
    BOOLVAL   shift, and go to state 11
    NUMBER    shift, and go to state 12
    FLOATNUM  shift, and go to state 13
    '('       shift, and go to state 74
    '['       shift, and go to state 35
    '-'       shift, and go to state 36

    basic_value  go to state 75
    op_prec3     go to state 140
    op_prec4     go to state 45
    op_prec5     go to state 46
    op_prec6     go to state 47
    op_prec7     go to state 48
    op_prec8     go to state 49
    list_expr    go to state 50


State 89

   71 op_prec3: op_prec4 GEQ . op_prec3

    ID        shift, and go to state 9
    BOOLVAL   shift, and go to state 11
    NUMBER    shift, and go to state 12
    FLOATNUM  shift, and go to state 13
    '('       shift, and go to state 74
    '['       shift, and go to state 35
    '-'       shift, and go to state 36

    basic_value  go to state 75
    op_prec3     go to state 141
    op_prec4     go to state 45
    op_prec5     go to state 46
    op_prec6     go to state 47
    op_prec7     go to state 48
    op_prec8     go to state 49
    list_expr    go to state 50


State 90

   68 op_prec3: op_prec4 '<' . op_prec3

    ID        shift, and go to state 9
    BOOLVAL   shift, and go to state 11
    NUMBER    shift, and go to state 12
    FLOATNUM  shift, and go to state 13
    '('       shift, and go to state 74
    '['       shift, and go to state 35
    '-'       shift, and go to state 36

    basic_value  go to state 75
    op_prec3     go to state 142
    op_prec4     go to state 45
    op_prec5     go to state 46
    op_prec6     go to state 47
    op_prec7     go to state 48
    op_prec8     go to state 49
    list_expr    go to state 50


State 91

   70 op_prec3: op_prec4 '>' . op_prec3
